# performance

./: .gitignore  CMakeLists.txt  LICENSE  README.md  listOfReferences.txt  tree.doc
Thesis/Thesis_Latex_Template/: ET.tex  Makefile  README  analyse.aux  analyse.tex  beispiele.aux  beispiele.tex  bibliothek.tex  bibliothek_ueberblick.aux  bibliothek_ueberblick.tex  deckblatt.aux  deckblatt.tex  einleitung.aux  einleitung.tex  epigraph.sty  future_development.aux  future_development.tex  literatur.bbl  literatur.bib  macros.tex  riabbrv.bst  rialpha.bst  systemgrundlagen.aux  systemgrundlagen.tex  testing.aux  testing.tex  thesis.aux  thesis.bbl  thesis.blg  thesis.lof  thesis.out  thesis.tex  thesis.toc  wissdoc.cls
Thesis/Thesis_Latex_Template/figures/einleitung/: hexagon.odg
Thesis/Thesis_Latex_Template/figures/testing/linux/criticalStats/: overall_stats.csv  runtime_statistics.csv
Thesis/Thesis_Latex_Template/figures/testing/linux/normalStats/: overall_stats.csv  runtime_statistics.csv
Thesis/Thesis_Latex_Template/figures/testing/windows/criticalStats/: overall_stats.csv  runtime_statistics.csv
Thesis/Thesis_Latex_Template/figures/testing/windows/normalStats/: overall_stats.csv  runtime_statistics.csv
cpu/: cpu.cpp
include/: system.hpp  workload.hpp
oldfiles/system/: CMakeLists.txt  system.cpp
oldfiles/system/linux/: system_linux.cpp  system_linux.hpp
oldfiles/system/windows/: system_windows.cpp
process_manipulator/: .process_manipulator.cpp.swp  .process_manipulator.hpp.swp  CMakeLists.txt  process_manipulator.cpp  process_manipulator.hpp
process_manipulator/cpu/: cpu.hpp
process_manipulator/impl/linux/: CMakeLists.txt  process_manipulator_impl.cpp
process_manipulator/impl/windows/: CMakeLists.txt  process_manipulator_impl.cpp
process_manipulator/linux/: CMakeLists.txt  system_linux.hpp
process_manipulator/utility/linux/: CMakeLists.txt  util_linux.cpp  util_linux.hpp
process_manipulator/utility/windows/: CMakeLists.txt  util_windows.cpp  util_windows.hpp
scripts/: eval.py  evaluation.py
source/: CMakeLists.txt  evaluation.py  system.cpp  system.hpp  test.cpp  workload.cpp  workload.hpp
system/: CMakeLists.txt  system.cpp  system.hpp
system/linux/: CMakeLists.txt  system_linux.cpp  system_linux.hpp
system/windows/: CMakeLists.txt  system_windows.cpp  system_windows.hpp
systemV2/: CMakeLists.txt  system.cpp  system.hpp
test/: CMakeLists.txt  test.cpp
workload/: CMakeLists.txt  workload.cpp  workload.hpp
